Fixed runtime error